Tests/Should_fail/duplicate_pattern2.int
let main = \x -> copy x as x, y, x in y
